# README.md

./: .gitignore  CLAUDE.md  README.md  THIRD-PARTY-NOTICES.md
docs/: CHANGELOG.md  README.md
docs/blog/: ko-01-readme-md.md
docs/deployment/: code-signing.md  microsoft-store.md  store-listing.md  webview2.md
docs/design/: architecture.md  data-model.md  overview.md
docs/design/decisions/: 0001-tech-stack-and-packaging.md
docs/design/features/: export.md  file-system.md  rendering.md  search.md  themes.md  workspace.md
docs/legal/: EULA.md  privacy.md
docs/mockups/: README.md  md-reader-shell.html
docs/notes/: development.md
docs/samples/: mermaid-gallery.md
packaging/: .gitignore  README.md  _paths.ps1  icon-render.html  pack-msix.ps1  pack-zip.ps1
packaging/msix/: AppxManifest.template.xml
release/: README.md
release/v0.5.0/: RELEASE_NOTES.md  THIRD-PARTY-NOTICES.md
release/v0.6.0/: RELEASE_NOTES.md
release/v0.6.1/: RELEASE_NOTES.md
release/v0.6.2/: RELEASE_NOTES.md
release/v0.6.3/: RELEASE_NOTES.md
release/v0.6.4/: RELEASE_NOTES.md
release/v0.6.5/: RELEASE_NOTES.md
src/: index.html  package-lock.json  package.json
src/app/: App.css  App.tsx  main.tsx
src/app/features/editor/: commands.ts  index.ts
src/app/features/export/: html.ts  index.ts  pdf.ts
src/app/lib/: fileTypes.ts  fonts.ts  fuzzy.ts  hoverName.ts  i18n.ts  markdown.ts  mermaid.ts  previewImages.ts  renderDoc.ts  sanitize.ts  slugify.ts  tauri.ts
src/app/locales/: en.json  ko.json
src/app/shell/: AppShell.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  Editor.tsx  FindReplace.tsx  Icon.tsx  Outline.tsx  OutlineOverlay.tsx  Presentation.tsx  Preview.tsx  PromptModal.tsx  Seam.tsx  SearchResults.tsx  SettingsPopover.tsx  WorkspaceTree.tsx  demoSeed.ts  sampleDocs.ts
src/app/store/: index.ts
src/app/themes/: apply.ts  index.ts
src/app/types/: markdown-it-plugins.d.ts  shims.d.ts
src/app/workers/: markdown.worker.ts
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/capabilities/: default.json
src/src-tauri/icons/: icon.icns
src/src-tauri/src/: assets.rs  db.rs  lib.rs
src/src-tauri/src/commands/: export.rs  fs_ops.rs  mod.rs  search.rs  watch.rs  workspace.rs
(+6 files in other folders)
