[package]
name = "md-reader"
version = "0.6.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "md_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"                        # .md 연결 실행 시 기존 창으로 경로 전달(단일 인스턴스)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"                                            # 내보내기: 로컬 이미지 바이트 → data URI
notify = "6"                                               # 파일 감시(외부 변경 감지)
rusqlite = { version = "0.32", features = ["bundled"] }    # SQLite + FTS5 (워크스페이스/검색). bundled=FTS5 포함

